add test.py to gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
 # Additional custom exceptions
-
+test.py
 
 # Created by https://www.gitignore.io/api/git,python,pycharm,windows,jupyternotebooks,visualstudiocode
 # Edit at https://www.gitignore.io/?templates=git,python,pycharm,windows,jupyternotebooks,visualstudiocode
